Added the mongodb tests and moved the mongodb into the core module. To get mongodb running, the java modules needed to be removed (quarkus packages the classes so that the module system does not work with quarkus).